--- a/rpc/grpc/zero/user/rpc/etc/user.yaml
+++ b/rpc/grpc/zero/user/rpc/etc/user.yaml
@@ -2,5 +2,7 @@ Name: user.rpc
 ListenOn: 0.0.0.0:8080
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+  - 117.50.179.8:2379
   Key: user.rpc
+  User: "root"
+  Pass: "fghf987...."
