--- a/rpc/grpc/zero/user/api/etc/user.yaml
+++ b/rpc/grpc/zero/user/api/etc/user.yaml
@@ -9,3 +9,6 @@ UserRpc:
     Key: user.rpc
     User: "root"
     Pass: "fghf987...."
+
+MySQL:
+  DataSource: root:root@tcp(117.50.179.8:13306)/user?charset=utf8mb4
